# rimca

./: Cargo.toml  README.md
src/librimca/: Cargo.toml
src/librimca/src/: auth.rs  download.rs  error.rs  launch.rs  lib.rs  paths.rs  state.rs  vanilla.rs  verify.rs
src/librimca/src/fabric/: api.rs  mod.rs  models.rs
src/librimca/src/vanilla/: api.rs  mod.rs  models.rs
src/rimca/: Cargo.toml
src/rimca/src/: config.rs  logger.rs  main.rs
