[package]
name = "librimca"
version = "0.2.0"
authors = ["liabri"]
edition = "2021"

[lib]
name = "rimca"
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
serde_json = "1.0.79"
serde = { version = "1.0.136", features = [ "derive" ] }
reqwest = { version = "0.11.9", features = ["blocking", "json"] }
nizziel = { path = "../../../nizziel" }
sha-1 = "0.9.4"
thiserror = "1.0.30"