[package]
name = "librimca"
version = "0.2.0"
authors = ["liabri"]
edition = "2021"

[lib]
name = "rimca"
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
serde_json = "1.0.85"
serde = { version = "1.0.144", features = [ "derive" ] }
reqwest = { version = "0.11.11", features = ["blocking", "json"] }
nizziel = { git = "https://github.com/liabri/nizziel" }
sha-1 = "0.10.0"
thiserror = "1.0.35"
tokio = "1.21.1"
log = "0.4.17"

oauth2 = "4.1.0"
url = "2.2.2"
opener = "0.5.0"